[gd_scene load_steps=14 format=3 uid="uid://d22tnf2poby64"]

[ext_resource type="Theme" uid="uid://dvbp11qywc6mv" path="res://componentes/popUps/popUp.tres" id="1_n87aj"]
[ext_resource type="Script" path="res://componentes/popUps/popUpRankingQuiz/popUpRankingQuiz.gd" id="1_vpvp3"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="2_2moy6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mugep"]
bg_color = Color(0, 0, 0, 0.294118)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k0o0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vlc1l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7wp23"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iyr4j"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_yvny2"]
color = Color(0.227451, 0.258824, 0.521569, 1)
thickness = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tpvij"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18dvf"]
bg_color = Color(0.18, 0.207, 0.45, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_250eh"]
bg_color = Color(0.18, 0.207, 0.45, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xf84"]
bg_color = Color(0.227451, 0.258824, 0.521569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PopUpRankingQuiz" type="PanelContainer"]
z_index = 4096
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mugep")
script = ExtResource("1_vpvp3")

[node name="PopUp" type="Panel" parent="."]
clip_contents = true
custom_minimum_size = Vector2(700, 600)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_n87aj")
metadata/_edit_use_anchors_ = true

[node name="ContainerVertical" type="VBoxContainer" parent="PopUp"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(348, 300)
metadata/_edit_use_anchors_ = true

[node name="Titulo" type="Label" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2moy6")
theme_override_font_sizes/font_size = 40
text = "Ranking do quiz"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FecharModal" type="Button" parent="PopUp/ContainerVertical/Titulo"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.938095
anchor_top = -0.0553221
anchor_right = 1.00595
anchor_bottom = 0.768207
offset_left = 5.5
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_hover_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_pressed_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_focus_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_colors/font_color = Color(0.658824, 0.188235, 0.188235, 1)
theme_override_fonts/font = ExtResource("2_2moy6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_k0o0q")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vlc1l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7wp23")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iyr4j")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k0o0q")
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Separador" type="HSeparator" parent="PopUp/ContainerVertical"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_yvny2")

[node name="MarginRanking" type="MarginContainer" parent="PopUp/ContainerVertical"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40

[node name="ItensContainer" type="VBoxContainer" parent="PopUp/ContainerVertical/MarginRanking"]
layout_mode = 2

[node name="Ranking" type="VBoxContainer" parent="PopUp/ContainerVertical/MarginRanking/ItensContainer"]
clip_contents = true
custom_minimum_size = Vector2(0, 440)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Cabecalho" type="HBoxContainer" parent="PopUp/ContainerVertical/MarginRanking/ItensContainer/Ranking"]
layout_mode = 2

[node name="NomeDosJogadores" type="Label" parent="PopUp/ContainerVertical/MarginRanking/ItensContainer/Ranking/Cabecalho"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2moy6")
theme_override_font_sizes/font_size = 22
text = "NOME DOS JOGADORES"

[node name="Pontuacao" type="Label" parent="PopUp/ContainerVertical/MarginRanking/ItensContainer/Ranking/Cabecalho"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_2moy6")
theme_override_font_sizes/font_size = 22
text = "PONTUAÇÃO"
horizontal_alignment = 2

[node name="FecharModal" type="Button" parent="PopUp/ContainerVertical/MarginRanking/ItensContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_2moy6")
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_tpvij")
theme_override_styles/hover = SubResource("StyleBoxFlat_18dvf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_250eh")
theme_override_styles/normal = SubResource("StyleBoxFlat_4xf84")
text = "Fechar"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
